# UCGUITest

./: CMakeLists.txt  README.md  ucGui.cpp
.github/workflows/: codeql-analysis.yml
Application/: MainTask.c  MicriumLogo.c  MicriumLogo_1bpp.c
Config/: GUIConf.h  LCDConf.h
GUI/: CMakeLists.txt
GUI/Core/: GUI_MOUSE_DriverPS2.c  GUI_X_Linux.xx
GUI/GUI_X/: GUI_X.c
GUI/LCDDriver/: LCDDummy.c  fb.c
